Upgrade from Spring Boot 2.4.1 to 4.0.6 (Spring Framework 7.0, Jdk21)